--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* pallette https://coolors.co/4f7cac-c0e0de-162521-3c474b-9eefe5 */
-@use "structure";
+/* @use "structure"; */
 
 * {
     box-sizing: border-box;
@@ -28,10 +28,11 @@ body {
     border: 1px solid white;
     outline: none;
     background-color: rgba(255, 255, 255, 0.75);
+    
+}
 
-    &:hover {
-        background-color: rgba(255, 255, 255, 0.9);
-    }
+.button:hover {
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .span-two {
@@ -41,7 +42,11 @@ body {
 .output {
     grid-column: 1 / -1;
     background-color: rgba(60, 71, 75, 0.75);
-    @include structure.flexMix(column, space-around, flex-end);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    /* @include structure.flexMix(column, space-around, flex-end); */
     padding: 10px;
 }
 
